--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -15,6 +15,7 @@
     min-width:280px;
     min-height:100vh;
     height:100%;
+    background-color:#F5F5F5;
   }
 }
 .sub-container{
@@ -132,23 +133,17 @@ table{
   }
 }
 /*vuetify-select*/
-.v-menu__content{
-  border-radius:0 !important;
-  .v-list-item{
-    .v-list-item__content{
-      .v-list-item__title{
-        font-size:1.6rem !important;
-        line-height: inherit !important;
+.v-overlay-container{
+  .v-overlay__content{
+    border-radius:0 !important;
+    .v-list{
+      padding:0 !important;
+      .v-list-item{
+        min-height:33px !important;
       }
     }
-    &.v-list-item--active{
-      &:before{
-        background-color:rgba(0,0,0,0.3);
-      }
-      .v-list-item__title{
-        color:#000;
-        font-weight:700;
-      }
+    .v-list-item-title{
+      font-size:1.4rem;
     }
   }
 }
